# python_practice

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.db  compose.yml  database.db  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 1f7c9392b63e_add_document_chunk_table.py  25348828110f_aded_fileobject_metadata.py  a1b2c3d4e5f6_add_otp_attempts.py  aa46dad790ca_adding_pgvector_extension.py  bcdee608b87e_initial_postgres_schema.py  e8db3fbdcb0f_initial_revision.py  f3e41f5a3c06_initial_revison.py
app/: dependencies.py  main.py  settings.py  utils.py
app/dependencies/: __init__.py  auth.py  logging.py  session.py  user.py
app/models/: __init__.py  change_password.py  document_chunk.py  exceptions.py  file.py  otp.py  pagination.py  refresh_token.py  timestamp.py  user.py
app/routers/: auth.py  files.py  users.py
app/services/: auth_service.py  pdf_service.py  text_service.py
app/services/storage/: __init__.py  local_storage.py  metered.py  storage.py
tests/: conftest.py  test_storage.py  test_text_service.py
tests/routers/: test_auth.py  test_files.py  test_users.py
