[project]
name = "practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "fastapi[standard]>=0.138.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pytest>=9.1.1",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.32",
    "sqlmodel>=0.0.38",
]
[tool.setuptools]
packages = ["app"]

[tool.fastapi]
entrypoint = "app.main:app"
